force-app/main/default/objects/QB_Company__c/QB_Company__c.object-meta.xml
<CustomObject>
    <description>The QuickBooks Company (aka BAC) is a perfect copy of your QuickBooks Customer</description>
    <label>QB Company</label>
    <nameField>
        <displayFormat>BW - {0000}</displayFormat>
        <label>QuickBooks Company #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>