force-app/main/default/objects/QB_Company__c/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <formula>IF( QB_Preferred_Delivery_Method__c  =&apos;1&apos;,&apos;Cash&apos;,
			IF( QB_Preferred_Delivery_Method__c  =&apos;2&apos;,&apos;Check&apos;,
				IF( QB_Preferred_Delivery_Method__c  =&apos;3&apos;,&apos;Visa&apos;,
				IF( QB_Preferred_Delivery_Method__c =&apos;4&apos;,&apos;MasterCard&apos;,
				IF( QB_Preferred_Delivery_Method__c  =&apos;5&apos;,&apos;Discover&apos;,
							IF( QB_Preferred_Delivery_Method__c  =&apos;6&apos;,&apos;American Express&apos;,
										IF( QB_Preferred_Delivery_Method__c  =&apos;8&apos;,&apos;Debit Card&apos;,&apos;None&apos;
							)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Method</label>
    <type>Text</type>
</CustomField>