force-app/main/default/objects/QB_Company__c/fields/QB_Account_no__c.field-meta.xml
<CustomField>
    <fullName>QB_Account_no__c</fullName>
    <label>Account no.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>