force-app/main/default/objects/QB_Company__c/fields/QB_Active__c.field-meta.xml
<CustomField>
    <fullName>QB_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>