force-app/main/default/objects/QB_Company__c/fields/QB_Bill_with_Parent__c.field-meta.xml
<CustomField>
    <fullName>QB_Bill_with_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill with Parent</label>
    <type>Checkbox</type>
</CustomField>