force-app/main/default/objects/QB_Company__c/fields/QB_Billing_Location__c.field-meta.xml
<CustomField>
    <fullName>QB_Billing_Location__c</fullName>
    <label>Billing Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>