force-app/main/default/objects/QB_Company__c/fields/QB_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>QB_Company_Name__c</fullName>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>