force-app/main/default/objects/QB_Company__c/fields/QB_Country__c.field-meta.xml
<CustomField>
    <fullName>QB_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>