force-app/main/default/objects/QB_Company__c/fields/QB_Currency__c.field-meta.xml
<CustomField>
    <fullName>QB_Currency__c</fullName>
    <label>Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>