force-app/main/default/objects/QB_Company__c/fields/QB_Default_Payment_Method_Ref__c.field-meta.xml
<CustomField>
    <fullName>QB_Default_Payment_Method_Ref__c</fullName>
    <label>Default Payment Method Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>