force-app/main/default/objects/QB_Company__c/fields/QB_Default_TaxCode_Ref__c.field-meta.xml
<CustomField>
    <fullName>QB_Default_TaxCode_Ref__c</fullName>
    <label>Default TaxCode Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>