force-app/main/default/objects/QB_Company__c/fields/QB_Do_not_Import_Bills__c.field-meta.xml
<CustomField>
    <fullName>QB_Do_not_Import_Bills__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Import Bills</label>
    <type>Checkbox</type>
</CustomField>