force-app/main/default/objects/QB_Company__c/fields/QB_Email__c.field-meta.xml
<CustomField>
    <fullName>QB_Email__c</fullName>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>