force-app/main/default/objects/QB_Company__c/fields/QB_Expected_Match__c.field-meta.xml
<CustomField>
    <fullName>QB_Expected_Match__c</fullName>
    <label>Expected Match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>