force-app/main/default/objects/QB_Company__c/fields/QB_Family_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>QB_Family_Last_Name__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>