force-app/main/default/objects/QB_Company__c/fields/QB_Given_First_Name__c.field-meta.xml
<CustomField>
    <fullName>QB_Given_First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>