force-app/main/default/objects/QB_Company__c/fields/QB_Job_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Job_Type_Id__c</fullName>
    <label>Job Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>