force-app/main/default/objects/QB_Company__c/fields/QB_Job_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>QB_Job_Type_Name__c</fullName>
    <label>Job Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>