force-app/main/default/objects/QB_Company__c/fields/QB_Last_Modified_in_QBO__c.field-meta.xml
<CustomField>
    <fullName>QB_Last_Modified_in_QBO__c</fullName>
    <label>Last Modified in QuickBooks</label>
    <type>DateTime</type>
</CustomField>