force-app/main/default/objects/QB_Company__c/fields/QB_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>QB_Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>