force-app/main/default/objects/QB_Company__c/fields/QB_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>QB_Mobile_Number__c</fullName>
    <label>Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>