force-app/main/default/objects/QB_Company__c/fields/QB_No_Associated_SF_Account__c.field-meta.xml
<CustomField>
    <fullName>QB_No_Associated_SF_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Associated SF Account</label>
    <type>Checkbox</type>
</CustomField>