force-app/main/default/objects/QB_Company__c/fields/QB_Notes__c.field-meta.xml
<CustomField>
    <fullName>QB_Notes__c</fullName>
    <label>Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>