force-app/main/default/objects/QB_Company__c/fields/QB_Other_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>QB_Other_Phone_Number__c</fullName>
    <label>Other Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>