force-app/main/default/objects/QB_Company__c/fields/QB_ParentRef__c.field-meta.xml
<CustomField>
    <fullName>QB_ParentRef__c</fullName>
    <label>ParentRef</label>
    <length>255</length>
    <type>Text</type>
</CustomField>