force-app/main/default/objects/QB_Company__c/fields/QB_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>QB_Phone_Number__c</fullName>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>