force-app/main/default/objects/QB_Company__c/fields/QB_Preferred_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>QB_Preferred_Delivery_Method__c</fullName>
    <label>Preferred Delivery Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>