force-app/main/default/objects/QB_Company__c/fields/QB_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Reference_Id__c</fullName>
    <label>Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>