force-app/main/default/objects/QB_Company__c/fields/QB_Region__c.field-meta.xml
<CustomField>
    <fullName>QB_Region__c</fullName>
    <label>State / Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>