force-app/main/default/objects/QB_Company__c/fields/QB_Salesforce_Account__c.field-meta.xml
<CustomField>
    <fullName>QB_Salesforce_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliated QuickBooks Companies</relationshipLabel>
    <relationshipName>QBO_Companies</relationshipName>
    <type>Lookup</type>
</CustomField>