force-app/main/default/objects/QB_Company__c/fields/QB_See_this_Customer_in_QBO__c.field-meta.xml
<CustomField>
    <fullName>QB_See_this_Customer_in_QBO__c</fullName>
    <formula>HYPERLINK(&quot;https://&quot;&amp;IF( CONTAINS(QB_QBO_Org_Name__c , &quot;Sandbox Company&quot;), &quot;sandbox.&quot; ,&quot;&quot;) &amp;&quot;qbo.intuit.com/app/&quot;&amp; IF( QB_Type__c==&quot;Vendor&quot;,&quot;vendordetail&quot;, &quot;customerdetail&quot;)&amp;&quot;?nameId=&quot;+ RIGHT( QB_External_Id__c ,(LEN(QB_External_Id__c )-FIND(&apos;-&apos;, QB_External_Id__c ))) ,QB_Display_Name__c , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>See this Customer in QuickBooks</label>
    <type>Text</type>
</CustomField>