force-app/main/default/objects/QB_Company__c/fields/QB_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>QB_Shipping_City__c</fullName>
    <label>Shipping City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>