force-app/main/default/objects/QB_Company__c/fields/QB_Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>QB_Shipping_Postal_Code__c</fullName>
    <label>Shipping Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>