force-app/main/default/objects/QB_Company__c/fields/QB_Shipping_State_Region__c.field-meta.xml
<CustomField>
    <fullName>QB_Shipping_State_Region__c</fullName>
    <label>Shipping State/Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>