force-app/main/default/objects/QB_Company__c/fields/QB_Shipping_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>QB_Shipping_Street_Address__c</fullName>
    <label>Shipping Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>