force-app/main/default/objects/QB_Company__c/fields/QB_Status__c.field-meta.xml
<CustomField>
    <fullName>QB_Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>