force-app/main/default/objects/QB_Company__c/fields/QB_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>QB_Street_Address__c</fullName>
    <label>Street Address</label>
    <type>TextArea</type>
</CustomField>