force-app/main/default/objects/QB_Company__c/fields/QB_Sub_Company__c.field-meta.xml
<CustomField>
    <fullName>QB_Sub_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sub Company</label>
    <type>Checkbox</type>
</CustomField>