force-app/main/default/objects/QB_Company__c/fields/QB_Suffix__c.field-meta.xml
<CustomField>
    <fullName>QB_Suffix__c</fullName>
    <label>Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>