force-app/main/default/objects/QB_Company__c/fields/QB_Tax_Resale_No__c.field-meta.xml
<CustomField>
    <fullName>QB_Tax_Resale_No__c</fullName>
    <label>Tax Resale No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>