force-app/main/default/objects/QB_Company__c/fields/QB_Title__c.field-meta.xml
<CustomField>
    <fullName>QB_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>