force-app/main/default/objects/QB_Company__c/fields/QB_Type__c.field-meta.xml
<CustomField>
    <fullName>QB_Type__c</fullName>
    <label>Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>