force-app/main/default/objects/QB_Company__c/fields/QB_Website__c.field-meta.xml
<CustomField>
    <fullName>QB_Website__c</fullName>
    <label>Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>