force-app/main/default/objects/QB_Company__c/fields/TEST_1__c.field-meta.xml
<CustomField>
    <fullName>TEST_1__c</fullName>
    <formula>QB_Shipping_City__c+&quot; &quot;+ QB_Shipping_Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEST 1</label>
    <type>Text</type>
</CustomField>